A4-kubernetes/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tender
  labels:
    app.kubernetes.io/part-of: tender
